test/tests/compiler/9_functions/invalid_types/extra_credit/compound_assign_function_rhs.plx
pub fn x(none) i32;

pub fn main(none) i32 {
    a: i32 = 3
    a += x
    return 0
}
